fix(spacing): better spacings

--- a/src/views/Heading/Heading.sass
+++ b/src/views/Heading/Heading.sass
@@ -23,11 +23,11 @@
       font-size: 4rem
   .circle
     z-index: 1
-    width: 55vw
-    height: 55vw
+    width: 50vw
+    height: 50vw
     position: absolute
-    right: -10vw
-    bottom: -20vw
+    right: -5vw
+    bottom: -10vw
     background: $red
     border-radius: 50%
     -webkit-box-shadow: $shadow
