--- a/src/views/Profile/Profile.sass
+++ b/src/views/Profile/Profile.sass
@@ -3,8 +3,8 @@
 #profile
   padding-left: $sectionPaddingExtra
   padding-right: $sectionPaddingExtra
-  padding-top: 400px
-  padding-bottom: 400px
+  padding-top: 300px
+  padding-bottom: 300px
   p
     font-size: 2rem
   .technologies
